--- a/rtptools.html
+++ b/rtptools.html
@@ -43,8 +43,8 @@ translates between VAT and RTP formats.
 
 <p>Sources for a variety of platforms and binaries for Windows NT are
 available from <a
-href="http://www.cs.columbia.edu/~hgs/software/rtptools/src">
-http://www.cs.columbia.edu/~hgs/rtptools/software/src</a>.
+href="http://www.cs.columbia.edu/IRT/software/rtptools/src">
+http://www.cs.columbia.edu/IRT/rtptools/software/src</a>.
 
 <p>The RTP tools should compile on any Posix-compliant platform
 supporting sockets, as well as Windows/NT/95/98/2000 (Win32).  They have
@@ -356,9 +356,10 @@ the unicast link should be able use both VAT and RTP.
 <p>The rtptools were written by <a
 href="http://www.cs.columbia.edu/~hgs">Henning Schulzrinne</a>, with
 enhancements by <a href="http://www.cs.columbia.edu/~pingpan">Ping
-Pan</a>.  rtptrans was written by <a
-href="mailto:sisalem@fokus.gmd.de">Dorgham Sisalem</a> and enhanced by
-<a href="mailto:casner@precept.com">Steve Casner</a>.
+Pan</a> and <a href="mailto:at541@columbia.edu">Akira Tsukamoto</a>. 
+rtptrans was written by <a href="mailto:sisalem@fokus.gmd.de">Dorgham
+Sisalem</a> and enhanced by <a href="mailto:casner@precept.com">Steve
+Casner</a>.
 
 <hr>
 <a href="ChangeLog.html">Program history</a>
