--- a/rtptools.html
+++ b/rtptools.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-<title>RTP Tools 1.18</title>
+<title>RTP Tools 1.19</title>
 <meta name="author" content="Henning Schulzrinne">
 <meta name="keywords" content="RTP; rtptools; debugging">
 </head>
 <body bgcolor="#38B0DE">
-<h1>RTP Tools (Version 1.18)</h1>
+<h1>RTP Tools (Version 1.19)</h1>
 
 <font color=red><big>
 The authors <b>cannot</b> provide support for compiling or running the
@@ -41,10 +41,10 @@ translates between VAT and RTP formats.
 
 <h2><a name="installation">Installation</a></h2>
 
-<p>Sources for a variety of platforms and binaries for Windows NT are
+<p>Sources for a variety of platforms and binaries for Windows are
 available from <a
-href="http://www.cs.columbia.edu/IRT/software/rtptools/src">
-http://www.cs.columbia.edu/IRT/rtptools/software/src</a>.
+href="http://www.cs.columbia.edu/IRT/software/rtptools/download">
+http://www.cs.columbia.edu/IRT/rtptools/software/download</a>.
 
 <p>The RTP tools should compile on any Posix-compliant platform
 supporting sockets, as well as Windows/NT/95/98/2000 (Win32).  They have
