Let the version change automatically

--- a/rtptools.html
+++ b/rtptools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-<title>RTP Tools 1.21</title>
+<title>RTP Tools VERSION</title>
 <meta name="author" content="Henning Schulzrinne">
 <meta name="keywords" content="RTP; rtptools; debugging">
 </head>
