Update changelog for 1.22 release

--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -31,6 +31,9 @@ Listing only major changes, see details in git log.
 <li>Generate html versions from man pages. (Akira Tsukamoto)
 <li>Reflect the manpages in the homepage. (Jan Stary)
 <li>Fix <code>recvmsg()</code> on Solaris. (Jan Stary)
+<li>Detect clang for compiling. (Jan Stary)
+<li>Fix generating a rpm package. (Akira Tsukamoto)
+<li>Fix building on Windows. (Akira Tsukamoto)
 </ul>
 
 <dt>1.21 (July 2016)</dt>
